--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     font-family: var(--font-texto);
-    font-size: 3vh;
+    font-size: 3.2vh;
 }
 
 section > p{
@@ -80,6 +80,7 @@ section > p{
     padding: 15px;
     color: white;
     text-shadow: 2px 2px 0px black;
+    line-height: 2em;
 }
 
 #dragao{
